--- a/linar.html
+++ b/linar.html
@@ -8,11 +8,21 @@
 </head>
 <body>
     <main class="my-main-flex-wraper">
-        <header class="my-header-wraper"><p>header</p>
-            <nav class="my-nav-wraper"><p>Navigation</p></nav>
+        <header class="my-header-wraper"><h1>Welcome to our page</h1>
+            <nav class="my-nav-wraper"><button>Ogodo's</button></nav>
         </header>
         <section class="my-section-wraper my-nested-wraper">
-            <figure><p>Picture</p></figure>
+            <figure><img src="image/IMG-.jpg" alt=""></figure>
+            <aside><p>About Us</p></aside>
+            <figure><img src="image/IMG-.jpg" alt=""></figure>
+            <aside><p>des</p></aside>
+            <figure><img src="image/IMG-.jpg" alt=""></figure>
+            <aside><p>description</p></aside>
+            <figure><img src="image/IMG-.jpg" alt=""></figure>
+            <aside><p>description</p></aside>
+            <figure><img src="image/IMG-.jpg" alt=""></figure>
+            <aside><p>description</p></aside>
+            <figure><img src="image/IMG-.jpg" alt=""></figure>
             <aside><p>description</p></aside>
         </section>
         <footer class="my-footer-wraper">
